# ampere_project

./: .dockerignore  .env.example  .gitignore  .tmp_known_hosts  Dockerfile  README.md  logging_overview.md  main.py  pyproject.toml  temp_airflow_query.sh  temp_airflow_runs.sh  temp_airflow_taskstates.sh  temp_bronze_describe.sh  temp_bronze_logs.sh  temp_bronze_logs_grep.sh  temp_bronze_tasklog_grep.sh  temp_bronze_tasklog_tail.sh  temp_find_airflow.sh  temp_find_airflow2.sh  temp_find_tasklog.sh  temp_k8s_query.sh  temp_pods_run.sh  temp_snap_apps.sh  temp_snap_apps2.sh  temp_snap_pods.sh  temp_sparkapps_all.sh  temp_sparkapps_run.sh  temp_workerlogs.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-ampere-dbt.yml  build-ampere-silver-dbt.yml  build-ampere-spark.yml  build-init-source-preparation.yml  build-order-data-generator.yml  build-source-to-raw-spark.yml  generate-dataflow-docs.yml  release-images.yml
ampere_db/procedures/: populate_and_index_table.sql  populate_bussiness_logic_tables.sql
ampere_db/views/: vw_dim_clients.sql  vw_dim_costing.sql  vw_dim_delivery_cost.sql  vw_dim_products.sql  vw_dim_resource.sql  vw_dim_stores.sql  vw_fct_deliveries.sql  vw_fct_orders.sql
dags/: init_data_source_dag.py  test_empty_dag.py
dags/another_folder/: hello_world.py
dags/config/: stream_groups.json  table_definitions.json
dags/data_source/: .env  data_source_initialization.py  init_data_source_dag.py  main_clients.py  main_orders.py
dags/db/: db_io.py
dags/dictionaries/: delivery_type.csv  product_categories.csv  products.csv  stores.csv
dags/generators/: assortment_gen.py  clients_gen.py  clients_gen_init.py  config.py  data_source_initialization.py  orders_gen.py  utils.py
dags/my_dags/: cleanup_minio_snapshots.py  (+41 more)
data_source/: .env  data_source_initialization.py  init_data_source_dag.py  main_clients.py  main_orders.py  test.py
dbt/: .user.yml  README.md  dbt-run-hello.yaml  dbt_project.yml  local.duckdb  profiles.yml  selectors.yml
deployment/: helm_kubernetes.sh  main_deploy.sh
deployment_old/: main_deploy.sh
docker/: image_tags.json
docker/init_source_preparation/: Dockerfile  README.md  pyproject.toml
docker/init_source_preparation/model/: __main__.py  config.py  data_source_initialization.py  db.py  ddl_init.py  logging_utils.py  pre_raw_contracts.yaml
docker/init_source_preparation/model/dictionaries/: costing.csv  delivery_costing.csv  products.csv  stores.csv  zones.csv
docker/init_source_preparation/model/generators/: assortment_gen.py  clients_gen_init.py  delivery_resource_gen_init.py
docker/order_data_generator/: Dockerfile  README.md  pyproject.toml
docker/order_data_generator/model/: __main__.py  config.py  db.py  logging_utils.py  main.py
docker/order_data_generator/model/generators/: clients_gen.py  orders_gen.py  utils.py
docs/: README.md
internal_docs/: init_data_preparation.md  project_schema.md
kube-cluster/: README.md  Vagrantfile  cluster_config.rb  deploy.env  deploy.sh
kube-cluster_test/: Vagrantfile  deploy.sh
project_images/: .$ampere_project_structure.svg.dtmp
spark/: values.template.yaml
tools/: README.md  __init__.py  uc_catalog_rebuild_and_docs.ipynb
(+274 files in other folders)
