[project]
name = "ampere-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "boto3>=1.40.18",
    "connectorx>=0.4.3",
    "dbt-duckdb>=1.9.4",
    "dotenv>=0.9.9",
    "duckdb>=1.3.2",
    "faker>=37.3.0",
    "fsspec>=2025.9.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "pyodbc>=5.2.0",
    "pyspark>=4.0.0",
    "ruff>=0.11.13",
    "sqlalchemy>=2.0.42",
]
