[project]
name = "ampere-project"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "boto3>=1.40.18",
    "dbt>=1.0.0.40.16",
    "dbt-duckdb>=1.9.4",
    "delta>=0.4.2",
    "deltalake>=1.4.1",
    "dotenv>=0.9.9",
    "duckdb>=1.4,<1.5",
    "faker>=37.3.0",
    "fsspec>=2025.9.0",
    "grpcio>=1.48.1",
    "grpcio-status>=1.48.1",
    "ipykernel>=7.2.0",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "polars>=1.37.1",
    "protobuf>=6.33,<7",
    "psycopg[binary]>=3.3.2",
    "pyarrow>=21.0.0",
    "pyodbc>=5.2.0",
    "pyspark>=4.1.1",
    "ruff>=0.11.13",
    "s3fs>=2025.9.0",
    "sqlalchemy>=2.0.43",
    "zstandard>=0.25.0",
]
